--- a/Aula/home.htm
+++ b/Aula/home.htm
@@ -1,17 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto hellow</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
- <HEAder>Mini Games</HEAder>
- <main><nav><a href="home.htm">home/</a> <a href="jogoadi.htm">Jogos</a>
-<section>
 
-</section>
-</main>
+    <header id="cabechalho">
+        <h1 class="titulo">Jogos de matematica</h1>
+        <img src="images.jpg" alt="" ">
+        <nav class=" nav">
+        <a href="home.htm">inicio</a>
+        <a href="jogoadi.htm">contato</a>
+        </nav>
+    </header>
+    <section class="secao">
+        <div class="matematica">
 
+            <h2 class="container-titulo">Jogo 1</h2>
+            <img src="download.png" alt="" width="200px>
+            
+            <p class=" bruto">jogo de teste de tabuada </p>
+            <input type="text" placeholder="Resposta aqui :>" class="cargo-formulario" />
+            <button class="botao">Enviar</button>
+            <p class="reposta">Resposta</p>
+        </div>
+        <div class="matematica ">
+
+            <h2 class="container-titulo">Jogo 2</h2>
+            <img src="adicao-de-matematica-para-modelo-de-vetor-de-criancas_917138-4358.avif" alt="" width="200px>
+            <p class=" bruto">Jogo de teste de cauculo</p>
+            <input type="text" placeholder="Resposta aqui :>" class="cargo-formulario" />
+            <button class="botao">Enviar Sua resposta</button>
+            <p class="reposta">Resposta</p>
+        </div>
+        <div class="matematica ">
+
+            <h2 class="container-titulo">Jogo 3</h2>
+            <img src="download (1).png" alt="" width="150px>
+            <p class=" bruto">Conteudo</p>
+            <input type="text" placeholder="Resposta aqui :>" class="cargo-formulario" />
+            <button class="botao">Enviar</button>
+            <p class="reposta">Resposta</p>
+        </div>
+    </section>
+    <FOoter id="footer">
+
+        <p> ACABO</p>
+    </FOoter>
 </body>
+
 </html>
