--- a/Aula/home.htm
+++ b/Aula/home.htm
@@ -11,46 +11,46 @@
 <body>
 
     <header id="cabechalho">
-        <h1 class="titulo">Jogos de matematica</h1>
-        <img src="images.jpg" alt="" ">
+        <h1 class="titulo">Jogos de matemática</h1>
+        <img src="econometrie-1200x410.jpg" alt="" width="700" height="160">
         <nav class=" nav">
-        <a href="home.htm">inicio</a>
-        <a href="jogoadi.htm">contato</a>
+        <a href="home.htm" style="text-decoration: none; color: black;">Início</a>
+        <a href="jogoadi.htm" style="text-decoration: none; color: black;">Contato</a>
         </nav>
     </header>
     <section class="secao">
         <div class="matematica">
 
-            <h2 class="container-titulo">Jogo 1</h2>
-            <img src="download.png" alt="" width="200px>
+            <h2 class="container-titulo" style="font-size: 30px;">Jogo 1</h2>
+            <img src="download.png" alt="" width="200px">
             
-            <p class=" bruto">jogo de teste de tabuada </p>
+            <p class= "bruto">Teste de Tabuada </p>
             <input type="text" placeholder="Resposta aqui :>" class="cargo-formulario" />
-            <button class="botao">Enviar</button>
-            <p class="reposta">Resposta</p>
+            <button class="botao" style="margin-bottom: 8px; margin: 8px; margin-top: 8px;">Enviar sua Resposta</button>
+            <p class="resposta">Resposta</p>
         </div>
         <div class="matematica ">
 
-            <h2 class="container-titulo">Jogo 2</h2>
-            <img src="adicao-de-matematica-para-modelo-de-vetor-de-criancas_917138-4358.avif" alt="" width="200px>
-            <p class=" bruto">Jogo de teste de cauculo</p>
+            <h2 class="container-titulo" style="font-size: 30px";>Jogo 2</h2>
+            <img src="adicao-de-matematica-para-modelo-de-vetor-de-criancas_917138-4358.avif" alt="" width="200px">
+            <p class= "bruto">Teste de Cáuculo</p>
             <input type="text" placeholder="Resposta aqui :>" class="cargo-formulario" />
-            <button class="botao">Enviar Sua resposta</button>
-            <p class="reposta">Resposta</p>
+            <button class="botao" style="margin-bottom: 8px; margin: 8px; margin-top: 8px;">Enviar sua Resposta</button>
+            <p class="resposta">Resposta</p>
         </div>
         <div class="matematica ">
 
-            <h2 class="container-titulo">Jogo 3</h2>
-            <img src="download (1).png" alt="" width="150px>
-            <p class=" bruto">Conteudo</p>
+            <h2 class="container-titulo" style="font-size: 30px;">Jogo 3</h2>
+            <img src="13.jpg" alt="" width="200px">
+            <p class= "bruto">Adivinhe o Número</p>
             <input type="text" placeholder="Resposta aqui :>" class="cargo-formulario" />
-            <button class="botao">Enviar</button>
-            <p class="reposta">Resposta</p>
+            <button class="botao" style="margin-bottom: 8px; margin: 8px; margin-top: 8px;">Enviar sua Resposta</button>
+            <p class="resposta">Resposta</p>
         </div>
     </section>
     <FOoter id="footer">
 
-        <p> ACABO</p>
+        <p>ACABO</p>
     </FOoter>
 </body>
 
