--- a/Aula/jogoadi.htm
+++ b/Aula/jogoadi.htm
@@ -1,15 +1,46 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto hellow</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
- <HEAder id="cabechaslho">
- <h1>contato</h1>
- <nav><a href="home.htm">home/</a> <a href="jogoadi.htm">Jogos</a></nav>
- <main><nav class="nav"></HEAder>
+    <header id="cabechalho">
+        <h1 class="titulo">contato</h1>
+
+        <nav class=" nav">
+            <a href="home.htm">inicio</a>
+            <a href="jogoadi.htm">contato</a>
+        </nav>
+    </header>
+
+    <section class="secao">
+        <table>
+            <tr>
+                <th>Nome: Carlos Eduardo Varela</th>
+                <th>Nome: Gustavo Eccher</th>
+            </tr>
+            <tr>
+                <th>Telefone: +55 (47) 99119-1492</th>
+                <th>Telefone: +55 (47) 99643-3494</th>
+            </tr>
+            <tr>
+                <th>CPF: 105.945.699-07</th>
+                <th>CPF: 115.904.749-96</th>
+            </tr>
+            <tr>
+                <th>Endereço: R. Das Margaridas, 238, Itopavazinha, Blumenau, SC</th>
+                <th>Endereço: R. Alois Scharf, 106, Itopavazinha, Blumenau, SC</th>
+            </tr>
+            <tr>
+                <th>E-Mail: Carloseduarod627@gmail.com</th>
+                <th>E-Mail: gugueccher@gmail.com</th>
+            </tr>
+        </table>
 </body>
-<PRe id=""></PRe>
+</section>
+<footer id="foooter">ACABO</footer>
