--- a/Hellow-main/Aula/home.htm
+++ b/Hellow-main/Aula/home.htm
@@ -45,11 +45,11 @@
             <p class= "bruto">Adivinhe o Número</p>
             <input type="text" placeholder="Resposta aqui :>" class="cargo-formulario" />
             <button class="botao" style="margin-bottom: 8px; margin: 8px; margin-top: 8px;">Enviar sua Resposta</button>
-            <p class="resposta">Resposta</p>
+            <p id="readivinhacao" class="resposta">Resposta</p>
         </div>
     </section>
     <FOoter id="footer">
-
+<script src="script.js"></script>
         <p>ACABO</p>
     </FOoter>
 </body>
